--- a/hosting/package.json
+++ b/hosting/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.0",
+    "dotenv": "^9.0.1",
+    "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
