get cloud functions working

--- a/hosting/package.json
+++ b/hosting/package.json
@@ -9,6 +9,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.0",
     "dotenv": "^9.0.1",
+    "express": "^4.17.1",
     "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
