--- a/hosting/package.json
+++ b/hosting/package.json
@@ -13,9 +13,11 @@
     "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
