--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,8 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   },
   "emulators": {
     "functions": {
@@ -18,5 +19,19 @@
     "ui": {
       "enabled": true
     }
+  },
+  "hosting": {
+    "public": "./hosting/build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
